--- a/Docs/examples/example_crate/Cargo.toml
+++ b/Docs/examples/example_crate/Cargo.toml
@@ -5,7 +5,15 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1"
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4"], default-features = false }
+serde = { version = "1", features = ["derive"], optional = true }
+tracing = { version = "0.1", optional = true }
 
 [dev-dependencies]
 mockall = "0.11"
+proptest = "1"
+
+[features]
+default = []
+serde = ["dep:serde", "uuid/serde"]
+tracing = ["dep:tracing"]
