--- a/Docs/examples/example_crate/Cargo.toml
+++ b/Docs/examples/example_crate/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 thiserror = "1"
 shaku = { version = "0.6", features = ["derive"] }
-tracing = "0.1"
+tracing = { version = "0.1", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
@@ -15,3 +15,4 @@ proptest = "1"
 [features]
 default = []
 serde = ["dep:serde"]
+logging = ["dep:tracing"]
