--- a/Docs/examples/example_crate/Cargo.toml
+++ b/Docs/examples/example_crate/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 thiserror = "1"
 shaku = { version = "0.6", features = ["derive"] }
 tracing = { version = "0.1", optional = true }
+tracing-subscriber = { version = "0.3", optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
@@ -15,4 +16,9 @@ proptest = "1"
 [features]
 default = []
 serde = ["dep:serde"]
-logging = ["dep:tracing"]
+logging = ["dep:tracing", "dep:tracing-subscriber"]
+
+[[bin]]
+name = "demo"
+path = "src/bin/demo.rs"
+required-features = ["logging"]
