--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,26 @@
-[package]
-name = "rust-bomberman"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+members = [
+    "crates/state",
+    "crates/engine",
+    "crates/influence",
+    "crates/path",
+    "crates/goals",
+    "crates/bombs",
+    "crates/bot",
+    "crates/events",
+    "crates/rl",
+    "crates/test_utils",
+    "crates/ffi",
+]
+resolver = "2"
 
-[dependencies]
-rand = "0.9.1"
-num_cpus = "1.13"
+[workspace.dependencies]
+tokio = { version = "1", features = ["full"] }
+crossbeam = "0.8"
+criterion = "0.3"
+proptest = "1.0"
+ndarray = "0.15"
+petgraph = "0.6"
+triomphe = "0.1"
+anyhow = "1.0"
+tch = "0.7"
