--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ petgraph = "0.6"
 triomphe = "0.1"
 anyhow = "1.0"
 tch = "0.7"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+bincode = "1"
