--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 rand = "0.9.1"
 num_cpus = "1.13"
+state = { path = "../state" }
+tokio = { workspace = true, features = ["sync"] }
