--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -8,3 +8,5 @@ rand = "0.9.1"
 num_cpus = "1.13"
 state = { path = "../state" }
 tokio = { workspace = true, features = ["sync"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
