--- a/crates/events/Cargo.toml
+++ b/crates/events/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 
 [dependencies]
 crossbeam = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
