feat(bombs): add power analysis modules

--- a/crates/bombs/Cargo.toml
+++ b/crates/bombs/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2024"
 petgraph = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
+
+[dev-dependencies]
+proptest = { workspace = true }
