--- a/crates/bot/Cargo.toml
+++ b/crates/bot/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tokio = { workspace = true }
+events = { path = "../events" }
+state = { path = "../state" }
+crossbeam = { workspace = true }
