--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -12,3 +12,4 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 events = { path = "../events" }
 bombs = { path = "../bombs" }
+crossbeam = { workspace = true }
