--- a/crates/events/Cargo.toml
+++ b/crates/events/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 crossbeam = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+state = { path = "../state" }
