--- a/crates/bot/Cargo.toml
+++ b/crates/bot/Cargo.toml
@@ -8,3 +8,6 @@ events = { path = "../events" }
 state = { path = "../state" }
 crossbeam = { workspace = true }
 thiserror = { workspace = true }
+goals = { path = "../goals" }
+path = { path = "../path" }
+influence = { path = "../influence" }
