--- a/crates/goals/Cargo.toml
+++ b/crates/goals/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 state = { path = "../state" }
 events = { path = "../events" }
 thiserror = { workspace = true }
+influence = { path = "../influence" }
+path = { path = "../path" }
