--- a/crates/path/Cargo.toml
+++ b/crates/path/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+influence = { path = "../influence" }
 
 [dev-dependencies]
 criterion = { workspace = true }
