--- a/crates/bot/Cargo.toml
+++ b/crates/bot/Cargo.toml
@@ -11,3 +11,8 @@ thiserror = { workspace = true }
 goals = { path = "../goals" }
 path = { path = "../path" }
 influence = { path = "../influence" }
+rl = { path = "../rl" }
+tch = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
