Add bomb system modules

--- a/crates/bombs/Cargo.toml
+++ b/crates/bombs/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 petgraph = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
+state = { path = "../state" }
 
 [dev-dependencies]
 proptest = { workspace = true }
