--- a/crates/bot/Cargo.toml
+++ b/crates/bot/Cargo.toml
@@ -11,9 +11,15 @@ thiserror = { workspace = true }
 goals = { path = "../goals" }
 path = { path = "../path" }
 influence = { path = "../influence" }
-rl = { path = "../rl" }
-tch = { workspace = true }
+rl = { path = "../rl", optional = true }
 bombs = { path = "../bombs" }
+tokio = { workspace = true, features = ["full"] }
+serde = { workspace = true, features = ["derive"] }
+log = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
+
+[features]
+default = []
+rl = ["dep:rl"]
