--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "common"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-thiserror = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
+thiserror = { workspace = true }
 log = { workspace = true }
-env_logger = { workspace = true }
 chrono = { workspace = true }
-engine = { path = "../engine" }
-bot = { path = "../bot" }
-events = { path = "../events" }
+anyhow = { workspace = true }
+env_logger = { workspace = true }
+
+[features]
+default = []
 
