--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rand = "0.9.1"
+rand = { workspace = true }
 num_cpus = "1.13"
 state = { path = "../state" }
 tokio = { workspace = true, features = ["sync"] }
@@ -16,8 +16,13 @@ bombs = { path = "../bombs" }
 crossbeam = { workspace = true }
 bot = { path = "../bot" }
 thiserror = { workspace = true }
-log = "0.4"
+log = { workspace = true }
 env_logger = "0.11"
 
 [dev-dependencies]
 tempfile = { workspace = true }
+
+[features]
+default = ["tournament"]
+tournament = []
+rl = ["bot/rl"]
