--- a/crates/influence/Cargo.toml
+++ b/crates/influence/Cargo.toml
@@ -5,7 +5,12 @@ edition = "2024"
 
 [dependencies]
 state = { path = "../state" }
+events = { path = "../events" }
 thiserror = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+log = { workspace = true }
+ndarray = "0.15"
+nalgebra = "0.32"
 
 [dev-dependencies]
 proptest = { workspace = true }
