--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ resolver = "2"
 tokio = { version = "1", features = ["full"] }
 crossbeam = "0.8"
 crossbeam-epoch = "0.9"
-criterion = "0.3"
-proptest = "1.0"
+criterion = { version = "0.5", features = ["html_reports"] }
+proptest = "1.4"
 ndarray = "0.15"
 petgraph = "0.6"
 triomphe = "0.1"
@@ -35,4 +35,6 @@ tempfile = "3"
 log = "0.4"
 env_logger = "0.11"
 chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
+tokio-test = "0.4"
+mockall = "0.12"
 
