--- a/crates/bot/Cargo.toml
+++ b/crates/bot/Cargo.toml
@@ -11,7 +11,6 @@ thiserror = { workspace = true }
 goals = { path = "../goals" }
 path = { path = "../path" }
 influence = { path = "../influence" }
-rl = { path = "../rl", optional = true }
 bombs = { path = "../bombs" }
 tokio = { workspace = true, features = ["full"] }
 serde = { workspace = true, features = ["derive"] }
@@ -19,7 +18,11 @@ log = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
+criterion = { workspace = true }
+tokio-test = { workspace = true }
+mockall = { workspace = true }
+proptest = { workspace = true }
+test_utils = { path = "../test_utils" }
 
 [features]
 default = []
-rl = ["dep:rl"]
