--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -18,6 +18,7 @@ bot = { path = "../bot" }
 thiserror = { workspace = true }
 log = { workspace = true }
 env_logger = "0.11"
+crossterm = "0.27"
 
 [dev-dependencies]
 tempfile = { workspace = true }
