--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = { workspace = true }
 log = { workspace = true }
 env_logger = "0.11"
 crossterm = "0.27"
+common = { path = "../common" }
 
 [dev-dependencies]
 tempfile = { workspace = true }
