--- a/crates/events/Cargo.toml
+++ b/crates/events/Cargo.toml
@@ -9,3 +9,9 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 state = { path = "../state" }
 thiserror = { workspace = true }
+
+
+
+
+common = { path = "../common" }
+
