Refactor spawn_bot to use apply_delta and remove temporary logging

--- a/crates/state/Cargo.toml
+++ b/crates/state/Cargo.toml
@@ -10,3 +10,7 @@ tokio = { workspace = true, features = ["sync"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 bincode = { workspace = true }
+
+log = { workspace = true }
+
+
