--- a/crates/bot/Cargo.toml
+++ b/crates/bot/Cargo.toml
@@ -15,6 +15,8 @@ bombs = { path = "../bombs" }
 tokio = { workspace = true, features = ["full"] }
 serde = { workspace = true, features = ["derive"] }
 log = { workspace = true }
+rand = { workspace = true }
+common = { path = "../common" }
 
 [dev-dependencies]
 tempfile = { workspace = true }
